<resources>
    <string name="app_name">SkinCancerDetection</string>

    <string name="text_greeting">Selamat Datang!\nSilahkan buat akun dan bergabung bersama kami</string>
    <string name="logo_condesc">logo</string>
    <string name="invalid_email">Email tidak valid</string>
    <string name="tx_nama">Nama :</string>
    <string name="hint_name_input">Masukan nama</string>
    <string name="tx_email">Email :</string>
    <string name="invalid_pass">Password harus lebih dari 6</string>
    <string name="password">Password :</string>
    <string name="tx_daftar">Daftar</string>
    <string name="tx_hint_input_email">Masukan Email</string>
    <string name="hint_pass_input">Masukan Password</string>
    <string name="tx_have_account">Sudah punya akun? Silahkan login</string>
    <string name="tx_dont_have_account">Belum punya akun? Silahkan mendaftar</string>
    <string name="sign_in_with_your_account">Silahkan Login Dengan Akunmu</string>
    <string name="judul_artikel">Judul artikel</string>
    <string name="isi_artikel">Isi artikel</string>
    <string name="tx_msg">Ingin mengetahui kondisi kulit kamu? Scan disini</string>
    <string name="scan_condesc">scan</string>
    <string name="txtwelcome">Selamat datang di Skin Cancer Detection</string>
    <string name="continueapp">lanjutkan</string>
    <string name="logout">Ganti Akun</string>
    <string name="tx_camera">Camera</string>
    <string name="tx_galery">Galery</string>
    <string name="txhome">Home</string>
    <string name="tx_history">History</string>
    <string name="tx_setting">Setting</string>
    <string name="tx_profil">Profil</string>
    <string name="tx_edit_profil">Ubah Profil</string>
    <string name="tx_save_profil">Simpan</string>
    <string name="tx_laki_laki">Laki-laki</string>
    <string name="tx_perempuan">Perempuan</string>
    <string name="tx_jenis_kelamin">Jenis Kelamin</string>
    <string name="tx_tanggal_lahir">Tanggal Lahir</string>
    <string name="photo_profil_condesc">Photo Profil</string>
    <string name="tx_judul_artikel">Judul Artikel</string>
    <string name="tx_content_artikel">Isi content artikel</string>
    <string name="tx_gambar_riwayat_condesc">Gambar riwayat</string>
    <string name="tx_hasil_scan">Hasil scan</string>
    <string name="tx_date">Tanggal</string>
    <string name="condesc_delete_riwatat">Tombol delete riwatat</string>
    <string name="condesc_banner">Gambar banner</string>
    <string name="tx_password">Password :</string>
    <string name="tx_hint_password">Masukan Password</string>
    <string name="tx_login">Login</string>
    <string name="condesc_gambar_artikel">Gambar Artikel</string>
    <string name="tx_hasil">Hasil :</string>
    <string name="tx_scan">Scan</string>
    <string name="condesc_scan">Scan</string>
    <string name="tx_or">Or</string>
    <string name="condesc_register_with_goolge">Register with goolge</string>
    <string name="tx_google">Google</string>

    <string name="invalid_name">Nama hanya berupa huruf</string>
    <string name="tx_tittle_help">Cara mengambil gambar yang benar</string>
    <string name="tx_guide_1">1. Pastikan tidak kekurangan cahaya</string>
    <string name="tx_guide_2">2. Posisi luka tidak terlalu jauh</string>
    <string name="tx_guide_3">3. Pastikan gambar jelas</string>
    <string name="tx_help">Help</string>
    <string name="desc_capture_photo">Photo</string>
    <string name="desc_switch_camera">switch camera</string>
    <string name="failed_open_cam">Gagal membuka kamera</string>
    <string name="failed_take_photo">Gagal mengambil gambar</string>
    <string name="note_have_permission">Izin tidak diberikan</string>
    <string name="chose_photo">Pilih foto terlebih dahulu</string>
    <string name="keluar">LOGOUT</string>
    <string name="gantiprofile">Ganti Foto</string>
    <string name="your_web_client_id">467866442266-ocdb4673012kah9hf7bq5e8o358dnuav.apps.googleusercontent.com</string>
    <string name="select_photo">Silahkan pilih foto</string>
</resources>