<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="40dp">

        <ProgressBar
            android:id="@+id/loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            tools:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            tools:ignore="UselessParent">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="192dp"
                android:layout_height="172dp"
                android:layout_gravity="center"
                android:src="@drawable/loggo" />


            <TextView
                android:id="@+id/titletv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/sign_in_with_your_account"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:text="@string/tx_email"
                android:textStyle="bold" />

            <com.example.storyapp.view.EmailEditTextView
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_corner"
                android:hint="@string/tx_hint_input_email"
                android:minHeight="48dp"
                android:paddingStart="16sp"
                android:paddingEnd="16sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tx_password"
                android:textStyle="bold" />

            <com.example.storyapp.view.PasswordEditTextView
                android:id="@+id/et_Pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_corner"
                android:hint="@string/tx_hint_password"
                android:minHeight="48dp"
                android:paddingHorizontal="16dp"
                app:passwordToggleEnabled="true" />

            <com.capstone.skincancerdetection.customview.ButtonView
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/tx_login"
                android:text="@string/tx_login" />

            <TextView
                android:id="@+id/link_regis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/tx_dont_have_account"
                android:textColor="@color/teal_700"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tx_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/tx_or"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_regist_with_google"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/transparant_border"
                android:contentDescription="@string/condesc_register_with_goolge"
                android:drawableLeft="@drawable/ic_google_icon"
                android:text="@string/tx_google"
                android:textColor="@color/black" />

        </LinearLayout>
    </RelativeLayout>

</ScrollView>