<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/loggo"
            android:contentDescription="@string/logo_condesc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tx_greeting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/text_greeting"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/edt_name"
            app:layout_constraintStart_toStartOf="@+id/edt_name"
            app:layout_constraintTop_toBottomOf="@+id/img_logo" />

        <TextView
            android:id="@+id/tx_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tx_nama"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/edt_name"
            app:layout_constraintTop_toBottomOf="@+id/tx_greeting" />

        <com.capstone.skincancerdetection.customview.EditTextView
            android:id="@+id/edt_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_name_input"
            android:minHeight="48dp"
            android:paddingStart="16sp"
            android:paddingEnd="16sp"
            android:background="@drawable/border_corner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tx_name"
            android:inputType="textPersonName"/>

        <TextView
            android:id="@+id/tx_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/tx_email"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/edt_email"
            app:layout_constraintTop_toBottomOf="@+id/edt_name" />

        <com.example.storyapp.view.EmailEditTextView
            android:id="@+id/edt_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/tx_hint_input_email"
            android:minHeight="48dp"
            android:paddingStart="16sp"
            android:paddingEnd="16sp"
            android:background="@drawable/border_corner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tx_email" />

        <TextView
            android:id="@+id/tx_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@+id/edt_password"
            app:layout_constraintTop_toBottomOf="@+id/edt_email" />

        <com.example.storyapp.view.PasswordEditTextView
            android:id="@+id/edt_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_pass_input"
            android:minHeight="48dp"
            android:paddingStart="16sp"
            android:paddingEnd="16sp"
            android:background="@drawable/border_corner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tx_pass" />

        <com.capstone.skincancerdetection.customview.ButtonView
            android:id="@+id/btn_register"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:text="@string/tx_daftar"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_password" />

        <TextView
            android:id="@+id/tx_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tx_have_account"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_register" />

        <TextView
            android:id="@+id/tx_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tx_or"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tx_have_account" />

        <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:id="@+id/btn_regist_with_google"
            android:text="@string/tx_google"
            android:drawableLeft="@drawable/ic_google_icon"
            android:background="@drawable/transparant_border"
            android:textColor="@color/black"
            android:contentDescription="@string/condesc_register_with_goolge"
            app:layout_constraintEnd_toEndOf="@+id/btn_register"
            app:layout_constraintStart_toStartOf="@+id/btn_register"
            app:layout_constraintTop_toBottomOf="@+id/tx_or" />

        <ProgressBar
            android:id="@+id/loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>