<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp"
    android:id="@+id/item_history_layout">

    <ImageView
        android:id="@+id/img_riwayat"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:contentDescription="@string/tx_gambar_riwayat_condesc"
        android:src="@drawable/ic_email_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tx_name_riwayat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx_nama"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/img_riwayat"
        app:layout_constraintTop_toTopOf="@+id/img_riwayat" />

    <TextView
        android:id="@+id/tx_riwayat_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:text="@string/tx_hasil_scan"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/img_riwayat"
        app:layout_constraintTop_toBottomOf="@+id/tx_name_riwayat" />

    <TextView
        android:id="@+id/tx_riwayat_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx_date"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/btn_delete_riwayat"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_delete_24"
        android:contentDescription="@string/condesc_delete_riwatat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>