<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    android:id="@+id/item_riwayat_layout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <ImageView
            android:id="@+id/img_artikel_item"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/benignskincancer"
            android:contentDescription="@string/condesc_gambar_artikel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tx_tittle_artikel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tx_judul_artikel"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_artikel_item" />

        <TextView
            android:id="@+id/tx_content_artikel"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="@string/tx_content_artikel"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:maxLines="4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tx_tittle_artikel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>