<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.ArticleActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_artikel"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_person_24"
            android:contentDescription="@string/condesc_gambar_artikel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tx_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul_artikel"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_artikel" />

        <TextView
            android:id="@+id/tx_isi_artikel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isi_artikel"
            android:justificationMode="inter_word"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tx_tittle" />

<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:id="@+id/scan_nav"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@drawable/rectangle_border"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent">-->

<!--            <TextView-->
<!--                android:id="@+id/tx_msg"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="0dp"-->
<!--                android:layout_marginEnd="5dp"-->
<!--                android:gravity="center_vertical"-->
<!--                android:padding="8dp"-->
<!--                android:text="@string/tx_msg"-->
<!--                android:textSize="18sp"-->
<!--                android:textStyle="bold"-->
<!--                app:layout_constraintBottom_toBottomOf="@+id/btn_scan"-->
<!--                app:layout_constraintEnd_toStartOf="@+id/btn_scan"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="@+id/btn_scan" />-->

<!--            <ImageView-->
<!--                android:id="@+id/btn_scan"-->
<!--                android:layout_width="70dp"-->
<!--                android:layout_height="70dp"-->
<!--                android:contentDescription="@string/scan_condesc"-->
<!--                android:src="@drawable/ic_baseline_photo_camera_24"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->

<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>